// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app Renders token counts consistently 🎉 1`] = `
<div>
  <p
    class="fFOiLQ _5Ob_nQ fM_HdA"
  >
    Use 5 of 50 credits
  </p>
</div>
`;

exports[`app Renders token counts consistently 🎉 2`] = `
<div>
  <p
    class="fFOiLQ _5Ob_nQ fM_HdA"
  >
    Use 1 of 1 credit
  </p>
</div>
`;

exports[`app Renders token counts consistently 🎉 3`] = `
<div>
  <p
    class="fFOiLQ _5Ob_nQ fM_HdA"
  >
    Use 1 of 0 credits
  </p>
</div>
`;
